[gd_scene load_steps=2 format=3 uid="uid://bajejodvbky4h"]

[ext_resource type="Script" path="res://Scripts/multiplayermain.gd" id="1_q41i2"]

[node name="Multimenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 1.0
offset_right = 40.0
offset_bottom = 41.0
scale = Vector2(28.76, 16.12)
size_flags_horizontal = 4
script = ExtResource("1_q41i2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.1335
offset_top = -8.58561
offset_right = 56.1335
offset_bottom = 127.414
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.101474, 0.105902)

[node name="Crear" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Volver")
mouse_default_cursor_shape = 2
text = "Crear"

[node name="Unirse" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Crear")
text = "Unirse"

[node name="Iniciar Partida" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Volver")
mouse_default_cursor_shape = 2
text = "Iniciar"

[node name="Volver" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Crear")
text = "Volver"

[connection signal="pressed" from="VBoxContainer/Crear" to="." method="_on_crear_pressed"]
[connection signal="pressed" from="VBoxContainer/Unirse" to="." method="_on_unirse_pressed"]
[connection signal="pressed" from="VBoxContainer/Iniciar Partida" to="." method="_on_iniciar_partida_pressed"]
[connection signal="pressed" from="VBoxContainer/Volver" to="." method="_on_volver_pressed"]
